--- a/CSS/common.css
+++ b/CSS/common.css
@@ -12,7 +12,7 @@
   float: left;
 }
 
-li {
+.header_list li {
   list-style: none;
   float: left;
   padding: 20px 40px;
@@ -21,6 +21,15 @@ li {
 .header_list {
   color: white;
   float: left;
+}
+
+.topLink {
+  color: white;
+}
+
+.topLink:hover {
+  color: #rgb(152, 117, 224);
+  font-weight: bold;
 }
 
 .main {
@@ -36,17 +45,14 @@ li {
 
 .aoki_text {
   color: white;
-  display: none;
 }
 
 .mori_text {
   color: white;
-  display: none;
 }
 
 .yokoi_text {
   color: white;
-  display: none;
 }
 
 /* whatskoengineer用のcss */
@@ -63,5 +69,30 @@ li {
   padding-left: 150px;
   font-family: 'SimHei';
   font-size: 25px;
-  display: none;
+}
+
+/* footer用のcss */
+.footer {
+  background-color: rgba(31, 29, 29, 0.9);
+  color: white;
+  height: 140px;
+  padding: 40px;
+  margin: 0;
+}
+
+.footer_logo {
+  color: white;
+  float: left;
+  font-size: 30px;
+}
+
+.footer_list {
+  color: white;
+  float: right;
+}
+
+.footer_list li {
+  list-style: none;
+  padding-bottom: 30px;
+  padding-right: 20px;
 }
