--- a/CSS/common.css
+++ b/CSS/common.css
@@ -1,3 +1,15 @@
+/* 共通 */
+
+/* header用のcss */
+.gotoTop {
+  height: 90px;
+  width: 90px;
+  margin-left: auto;
+  margin-right: 0;
+  padding: 0;
+  float: right;
+}
+
 .header {
   background-color: black;
   height: 90px;
@@ -32,11 +44,41 @@
   font-weight: bold;
 }
 
+/* mainのcss */
 .main {
   background-color: #696969;
   height: 700px;
 }
 
+/* footer用のcss */
+.footer {
+  background-color: rgba(31, 29, 29, 0.9);
+  color: white;
+  height: 140px;
+  padding: 40px;
+  margin: 0;
+}
+
+.footer_logo {
+  color: white;
+  float: left;
+  font-size: 30px;
+}
+
+.footer_list {
+  color: white;
+  float: right;
+}
+
+.footer_list li {
+  list-style: none;
+  padding-bottom: 30px;
+  padding-right: 20px;
+}
+
+/* 各ページ */
+
+/* topのcss */
 .contents_item {
   float: left;
   margin-top: 60px;
@@ -71,28 +113,4 @@
   font-size: 25px;
 }
 
-/* footer用のcss */
-.footer {
-  background-color: rgba(31, 29, 29, 0.9);
-  color: white;
-  height: 140px;
-  padding: 40px;
-  margin: 0;
-}
-
-.footer_logo {
-  color: white;
-  float: left;
-  font-size: 30px;
-}
-
-.footer_list {
-  color: white;
-  float: right;
-}
-
-.footer_list li {
-  list-style: none;
-  padding-bottom: 30px;
-  padding-right: 20px;
-}
+/* whatDo用のcss */
